@@ -14,11 +14,13 @@
     <groupId>com.insurance</groupId>
     <artifactId>insurance-policy-holders-dashboard</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>InsurancePolicyHoldersDashboard</name>
+    <name>PolicyOverviewDashboard</name>
     <description>Insurance Policy Holders Dashboard</description>
 
     <properties>
         <java.version>17</java.version>
+        <gatling.version>3.13.1</gatling.version>
+        <gatling-maven-plugin.version>4.10.0</gatling-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -51,8 +53,19 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.gatling.highcharts</groupId>
+            <artifactId>gatling-charts-highcharts</artifactId>
+            <version>${gatling.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -69,6 +82,20 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.gatling</groupId>
+                <artifactId>gatling-maven-plugin</artifactId>
+                <version>${gatling-maven-plugin.version}</version>
+                <configuration>
+                    <simulationClass>com.insurance.dashboard.performance.PolicyEndpointSimulation</simulationClass>
+                    <includeTestClasspath>true</includeTestClasspath>
+                    <jvmArgs>
+                        <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
+                        <jvmArg>-Djavax.net.ssl.trustStoreType=Windows-ROOT</jvmArg>
+                    </jvmArgs>
                 </configuration>
             </plugin>
         </plugins>
